Fix java 17 code smells #2 (#825)
* Fix java 17 code smells #2

* Fix java 17 code smells #2

* Fix build

---------

Co-authored-by: Marco Simons <marco.simons@kadaster.nl>