@@ -4,6 +4,7 @@ import static graphql.schema.GraphQLTypeUtil.unwrapAll;
 import static java.util.Objects.requireNonNull;
 import static java.util.Optional.ofNullable;
 import static java.util.function.Predicate.not;
+import static java.util.stream.Collectors.toCollection;
 import static org.dotwebstack.framework.core.backend.filter.FilterCriteriaBuilder.newFilterCriteriaBuilder;
 import static org.dotwebstack.framework.core.datafetchers.SortConstants.SORT_ARGUMENT_NAME;
 import static org.dotwebstack.framework.core.datafetchers.aggregate.AggregateHelper.getAggregateFunctionType;
@@ -38,6 +39,7 @@ import graphql.schema.GraphQLObjectType;
 import graphql.schema.GraphQLType;
 import graphql.schema.GraphQLTypeUtil;
 import graphql.schema.SelectedField;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -165,7 +167,7 @@ public class BackendRequestFactory {
         .filter(isScalarField)
         .filter(not(isIntrospectionField))
         .flatMap(this::mapScalarFieldToFieldRequests)
-        .collect(Collectors.toList());
+        .collect(toCollection(ArrayList::new));
   }
 
   private Stream<FieldRequest> mapScalarFieldToFieldRequests(SelectedField selectedField) {
@@ -237,7 +239,7 @@ public class BackendRequestFactory {
               .aggregateFields(getAggregateFields(aggregationObjectType, selectedField.getSelectionSet()))
               .build();
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<AggregateField> getAggregateFields(ObjectType<?> objectType,
@@ -245,7 +247,7 @@ public class BackendRequestFactory {
     return selectionSet.getImmediateFields()
         .stream()
         .map(selectedField -> createAggregateField(objectType, selectedField))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private AggregateField createAggregateField(ObjectType<?> objectType, SelectedField selectedField) {
@@ -303,7 +305,7 @@ public class BackendRequestFactory {
             .containsKey(KEY_FIELD))
         .filter(argument -> argumentValues.containsKey(argument.getName()))
         .map(argument -> createKeyCriteria(objectType, argumentValues, argument))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private KeyCriteria createKeyCriteria(ObjectType<?> objectType, Map<String, Object> argumentMap,
@@ -347,7 +349,7 @@ public class BackendRequestFactory {
             .fieldPath(createFieldPath(objectType, config.getField()))
             .direction(config.getDirection())
             .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private String formatSortEnumName(String enumName) {
